# CCDR_claude_test

./: .gitattributes  .gitignore  CCDR_v7_7_Reshaped_Predictions (1).docx  CLAUDE (2).md  K4_FORMULA_REPAIR_REPORT.md  PB12_FORMULA_REPAIR_REPORT.md  README.md  RUN_REPORT.md  predictions_data (1).py  predictions_export (1).json  pyproject.toml
audits/op11_nu/: CLAUDE_op11_nu.md
ccdr/: __init__.py
ccdr/audits/: __init__.py
ccdr/core/: action.py  cascade.py  parameters.py  perturbations.py  rvm.py  status.py
ccdr/derivations/: algebra_bounds.py  base.py  boundary_deformation.py  bulk_weyl.py  cascade_residue.py  flavour_wilson.py  grain_boundary.py  joint_inference.py  lattice_count.py  particle_inventory.py  photon_dispersion.py  rvm_cosmology.py  theory_consistency.py
ccdr/predictions/: _tier_b_stub.py  base.py  p_a01_filament_correlation.py  p_a02_mass_tower.py  p_a03_highz_a0.py  p_a04_as_eprl_consistency.py  p_a05_ringdown_qnm.py  p_a06_subbao_harmonics.py  p_a07_void_kurtosis.py  p_a08_secular_w_drift.py  p_a09_bulk_weyl_bmode.py  p_a10_b_to_smumu_pattern.py  p_a11_boundary_deformation.py  p_a12_cl4_joint_p3_p38.py  p_a13_dark_photon_mixing.py  p_a14_cosmic_string_tension.py  p_a15_cdt_chirality.py  p_a16_dao_bound.py  p_a17_axion_mass.py  p_a18_right_handed_nu.py  p_a19_joint_consistency.py  p_b01_rvm_bao_shift.py  p_b02_filament_fnl.py  p_b03_qgp_viscosity.py  p_b04_pta_spectral_index.py  p_b05_pta_kappa_correlation.py  p_b06_frozen_vs_live_dm.py  p_b07_density_correlated_kappa.py  p_b08_cmb_spectral_distortions.py  (+5 more)
scripts/: refresh_manifests.py
(+151 files in other folders)
