[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ccdr"
version = "0.1.0"
description = "CCDR Prediction Project — unified derivation × measurement pipeline"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
sympy = ["sympy"]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["ccdr*"]
exclude = ["ccdr.data.cache*"]

[tool.pytest.ini_options]
testpaths = ["ccdr/tests", "ccdr/derivations/tests", "ccdr/data/tests", "ccdr/audits/op11_nu/tests"]
